<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvNombreContactoDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desea_llamar_a"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp" />

    <Button
        android:id="@+id/btnLlamar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="llamar"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compartir_contacto"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnVerImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_imagen"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_contacto"
        android:backgroundTint="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_contacto"
        android:backgroundTint="@android:color/holo_orange_light"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp" />

</LinearLayout>